# cpp-linenoise

./: .gitignore  CMakeLists.txt  README.md  linenoise.hpp
.github/workflows/: test.yml
example/: CMakeLists.txt  example.cpp  main.cpp
example/multiinclude/: f1.cpp  f2.cpp
scripts/: gen_unicode_tables.py
test/: grapheme_break_test.inc  test.cpp
